// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions create SET_MOVIE 1`] = `
Array [
  Object {
    "payload": Object {
      "movie": Object {
        "genres": Array [
          "comedies",
        ],
        "id": 1,
        "overview": "Don't miss the fun in this hilariously sexy comedy that has Antonio Banderas (Once Upon a Time in Mexico), Madonna (Swept Away), and a sizzling all-star cast checking in for laughs! It's Ted the Bellhop's (Tim Roth, Pulp Fiction) first night on the job...and the hotel's very unusual guests are about to place him in some outrageous predicaments.",
        "poster_path": "https://images-na.ssl-images-amazon.com/images/I/51qcn-rYWqL._SY450_.jpg",
        "release_date": "1995",
        "runtime": 97,
        "tagline": "Oscar-winning Movies",
        "title": "Four rooms",
        "vote_average": 3,
      },
    },
    "type": "SET_MOVIE",
  },
]
`;

exports[`actions create SET_MOVIE_LIST 1`] = `
Array [
  Object {
    "payload": Object {
      "movies": Array [
        Object {
          "genres": Array [
            "comedies",
          ],
          "id": 1,
          "overview": "Don't miss the fun in this hilariously sexy comedy that has Antonio Banderas (Once Upon a Time in Mexico), Madonna (Swept Away), and a sizzling all-star cast checking in for laughs! It's Ted the Bellhop's (Tim Roth, Pulp Fiction) first night on the job...and the hotel's very unusual guests are about to place him in some outrageous predicaments.",
          "poster_path": "https://images-na.ssl-images-amazon.com/images/I/51qcn-rYWqL._SY450_.jpg",
          "release_date": "1995",
          "runtime": 97,
          "tagline": "Oscar-winning Movies",
          "title": "Four rooms",
          "vote_average": 3,
        },
        Object {
          "genres": Array [
            "action",
            "adventure",
          ],
          "id": 2,
          "overview": "From groundbreaking writer and director Quentin Tarantino KILL BILL VOLUME 1 stars Uma Thurman, Lucy Liu, and Vivica A. Fox in an epic vendetta! Four years after taking a bullet in the head at her own wedding, The Bride emerges from a coma and decides it's time for payback! Having been gunned down by her former boss and his deadly squad of international assassins, it's a kill-or- be- killed fight.",
          "poster_path": "https://images-na.ssl-images-amazon.com/images/I/71XwrZLWOBL._SY450_.jpg",
          "release_date": "2003",
          "runtime": 150,
          "tagline": "Oscar-winning Movies",
          "title": "Kill Bill: Vol. 1",
          "vote_average": 4.5,
        },
        Object {
          "genres": Array [
            "comedies",
          ],
          "id": 3,
          "overview": "Don't miss the fun in this hilariously sexy comedy that has Antonio Banderas (Once Upon a Time in Mexico), Madonna (Swept Away), and a sizzling all-star cast checking in for laughs! It's Ted the Bellhop's (Tim Roth, Pulp Fiction) first night on the job...and the hotel's very unusual guests are about to place him in some outrageous predicaments.",
          "poster_path": "https://images-na.ssl-images-amazon.com/images/I/51qcn-rYWqL._SY450_.jpg",
          "release_date": "1995",
          "runtime": 97,
          "tagline": "Oscar-winning Movies",
          "title": "Four rooms",
          "vote_average": 3,
        },
        Object {
          "genres": Array [
            "action",
            "adventure",
          ],
          "id": 4,
          "overview": "From groundbreaking writer and director Quentin Tarantino KILL BILL VOLUME 1 stars Uma Thurman, Lucy Liu, and Vivica A. Fox in an epic vendetta! Four years after taking a bullet in the head at her own wedding, The Bride emerges from a coma and decides it's time for payback! Having been gunned down by her former boss and his deadly squad of international assassins, it's a kill-or- be- killed fight.",
          "poster_path": "https://images-na.ssl-images-amazon.com/images/I/71XwrZLWOBL._SY450_.jpg",
          "release_date": "2003",
          "runtime": 150,
          "tagline": "Oscar-winning Movies",
          "title": "Kill Bill: Vol. 1",
          "vote_average": 4.5,
        },
        Object {
          "genres": Array [
            "comedies",
          ],
          "id": 5,
          "overview": "Don't miss the fun in this hilariously sexy comedy that has Antonio Banderas (Once Upon a Time in Mexico), Madonna (Swept Away), and a sizzling all-star cast checking in for laughs! It's Ted the Bellhop's (Tim Roth, Pulp Fiction) first night on the job...and the hotel's very unusual guests are about to place him in some outrageous predicaments.",
          "poster_path": "https://images-na.ssl-images-amazon.com/images/I/51qcn-rYWqL._SY450_.jpg",
          "release_date": "1995",
          "runtime": 97,
          "tagline": "Oscar-winning Movies",
          "title": "Four rooms",
          "vote_average": 3,
        },
        Object {
          "genres": Array [
            "action",
            "adventure",
          ],
          "id": 6,
          "overview": "From groundbreaking writer and director Quentin Tarantino KILL BILL VOLUME 1 stars Uma Thurman, Lucy Liu, and Vivica A. Fox in an epic vendetta! Four years after taking a bullet in the head at her own wedding, The Bride emerges from a coma and decides it's time for payback! Having been gunned down by her former boss and his deadly squad of international assassins, it's a kill-or- be- killed fight.",
          "poster_path": "https://images-na.ssl-images-amazon.com/images/I/71XwrZLWOBL._SY450_.jpg",
          "release_date": "2003",
          "runtime": 150,
          "tagline": "Oscar-winning Movies",
          "title": "Kill Bill: Vol. 1",
          "vote_average": 4.5,
        },
        Object {
          "genres": Array [
            "comedies",
          ],
          "id": 7,
          "overview": "Don't miss the fun in this hilariously sexy comedy that has Antonio Banderas (Once Upon a Time in Mexico), Madonna (Swept Away), and a sizzling all-star cast checking in for laughs! It's Ted the Bellhop's (Tim Roth, Pulp Fiction) first night on the job...and the hotel's very unusual guests are about to place him in some outrageous predicaments.",
          "poster_path": "https://images-na.ssl-images-amazon.com/images/I/51qcn-rYWqL._SY450_.jpg",
          "release_date": "1995",
          "runtime": 97,
          "tagline": "Oscar-winning Movies",
          "title": "Four rooms",
          "vote_average": 3,
        },
      ],
    },
    "type": "SET_MOVIE_LIST",
  },
]
`;

exports[`actions create SET_SEARCH 1`] = `
Array [
  Object {
    "payload": Object {
      "searchValue": "cats",
    },
    "type": "SET_SEARCH",
  },
]
`;

exports[`actions create SET_SEARCH_BY 1`] = `
Array [
  Object {
    "payload": Object {
      "filterValue": "genres",
    },
    "type": "SET_SEARCH_BY",
  },
]
`;

exports[`actions create SET_SORT_BY 1`] = `
Array [
  Object {
    "payload": Object {
      "filterValue": "vote_average",
    },
    "type": "SET_SORT_BY",
  },
]
`;

exports[`async actions create SET_MOVIE when fetching has been done 1`] = `
Array [
  Object {
    "payload": Object {
      "movie": Object {},
    },
    "type": "SET_MOVIE",
  },
]
`;

exports[`async actions create SET_MOVIE_LIST when fetching has been done 1`] = `
Array [
  Object {
    "payload": Object {
      "movies": Array [
        Object {
          "budget": 0,
          "genres": Array [
            "Action",
            "Adventure",
            "Science Fiction",
          ],
          "id": 447365,
          "overview": "The third film based on Marvel's Guardians of the Galaxy.",
          "poster_path": "https://image.tmdb.org/t/p/w500/ldoY4fTZkGISMidNw60GHoNdgP8.jpg",
          "release_date": "2020-05-01",
          "revenue": 0,
          "runtime": null,
          "tagline": "",
          "title": "Guardians of the Galaxy Vol. 3",
          "vote_average": 0,
          "vote_count": 9,
        },
        Object {
          "budget": 0,
          "genres": Array [
            "Science Fiction",
            "Action",
            "Adventure",
          ],
          "id": 424785,
          "overview": "Plot unknown.",
          "poster_path": "https://image.tmdb.org/t/p/w500/432BowXw7a4fWXSONxBaFKqvW4f.jpg",
          "release_date": "2019-06-26",
          "revenue": 0,
          "runtime": null,
          "tagline": "",
          "title": "Transformers 7",
          "vote_average": 0,
          "vote_count": 0,
        },
        Object {
          "budget": 0,
          "genres": Array [
            "Action",
            "Adventure",
            "Science Fiction",
          ],
          "id": 299534,
          "overview": "The culmination of the Marvel Cinematic Universe.",
          "poster_path": "https://image.tmdb.org/t/p/w500/aMETsaNNcDc6g5ZatQtVbySnSaA.jpg",
          "release_date": "2019-04-24",
          "revenue": 0,
          "runtime": null,
          "tagline": "",
          "title": "Untitled Avengers",
          "vote_average": 0,
          "vote_count": 9,
        },
        Object {
          "budget": 0,
          "genres": Array [
            "Action",
            "Adventure",
            "Fantasy",
            "Science Fiction",
          ],
          "id": 287947,
          "overview": "We all have a superhero inside us, it just takes a bit of magic to bring it out. In Billy Batson's case, by shouting out one word--SHAZAM!--this streetwise 14-year-old foster kid can turn into the adult superhero Shazam, courtesy of an ancient wizard.Still a kid at heart--inside a ripped, godlike body--Shazam revels in this adult version of himself by doing what any teen would do with superpowers: have fun with them! Can he fly? Does he have X-ray vision? Can he shoot lightning out of his hands? Can he skip his social studies test? Shazam sets out to test the limits of his abilities with the joyful recklessness of a child. But he'll need to master these powers quickly in order to fight the deadly forces of evil controlled by Doctor Thaddeus Sivana.",
          "poster_path": "https://image.tmdb.org/t/p/w500/yUOJHa9XmB1H0iYodG9Kb3YCc9T.jpg",
          "release_date": "2019-04-05",
          "revenue": 0,
          "runtime": null,
          "tagline": "",
          "title": "Shazam!",
          "vote_average": 0,
          "vote_count": 5,
        },
        Object {
          "budget": 0,
          "genres": Array [
            "Action",
            "Science Fiction",
          ],
          "id": 320288,
          "overview": "Gathered together by Professor Charles Xavier to protect a world that fears and hates them, the X-Men had fought many battles, been on adventures that spanned galaxies, grappled enemies of limitless might, but none of this could prepare them for the most shocking struggle they would ever face. One of their own members, Jean Grey, has gained power beyond all comprehension, and that power has corrupted her absolutely! Now, they must decide if the life of the woman they cherish is worth the existence of the entire universe!",
          "poster_path": "https://image.tmdb.org/t/p/w500/6qmsupE0opYPIaBGe7T5D2FBzLs.jpg",
          "release_date": "2019-02-14",
          "revenue": 0,
          "runtime": null,
          "tagline": "",
          "title": "X-Men: Dark Phoenix",
          "vote_average": 0,
          "vote_count": 0,
        },
        Object {
          "budget": 0,
          "genres": Array [
            "Action",
            "Adventure",
            "Fantasy",
            "Science Fiction",
          ],
          "id": 181790,
          "overview": "Sean and Hank go on their biggest adventure yet, to the moon.",
          "poster_path": "https://image.tmdb.org/t/p/w500/98tbNloMBztAVnWpAznKKVUdi2O.jpg",
          "release_date": "2018-12-31",
          "revenue": 0,
          "runtime": null,
          "tagline": "",
          "title": "Journey 3: From the Earth to the Moon",
          "vote_average": 0,
          "vote_count": 7,
        },
        Object {
          "budget": 160000000,
          "genres": Array [
            "Action",
            "Fantasy",
            "Science Fiction",
          ],
          "id": 297802,
          "overview": "Following the events of Justice League, Arthur Curry, the reluctant ruler of the underwater kingdom of Atlantis, is caught between surface dwellers and his own people who are ready to lash out and invade the surface.",
          "poster_path": "https://image.tmdb.org/t/p/w500/sshNRCbtU2ON8SiWLycQzr05doX.jpg",
          "release_date": "2018-12-19",
          "revenue": 0,
          "runtime": null,
          "tagline": "",
          "title": "Aquaman",
          "vote_average": 0,
          "vote_count": 0,
        },
        Object {
          "budget": 0,
          "genres": Array [
            "Adventure",
            "Action",
            "Thriller",
          ],
          "id": 353081,
          "overview": "The sixth installment in the \\"Mission: Impossible\\". When an IMF mission ends badly, the world is faced with dire consequences. As Ethan Hunt takes it upon himself to fulfil his original briefing, the CIA begin to question his loyalty and his motives. The IMF team find themselves in a race against time, hunted by assassins while trying to prevent a global catastrophe.",
          "poster_path": "https://image.tmdb.org/t/p/w500/A2W75CVz9l8gEeWhQiiftlOCkgi.jpg",
          "release_date": "2018-07-26",
          "revenue": 0,
          "runtime": null,
          "tagline": "",
          "title": "Mission: Impossible - Fallout",
          "vote_average": 0,
          "vote_count": 3,
        },
        Object {
          "budget": 0,
          "genres": Array [
            "Action",
            "Adventure",
            "Drama",
            "Science Fiction",
            "Thriller",
          ],
          "id": 351286,
          "overview": "A volcanic eruption threatens the remaining dinosaurs on the island of Isla Nublar, where the creatures have freely roamed for several years after the demise of an animal theme park known as Jurassic World. Claire Dearing, the former park manager, has now founded the Dinosaur Protection Group, an organization dedicated to protecting the dinosaurs. To help with her cause, Claire has recruited Owen Grady, a former dinosaur trainer who worked at the park, to prevent the extinction of the dinosaurs once again.",
          "poster_path": "https://image.tmdb.org/t/p/w500/ln6d5Okr6VK5vfQVobJTiYxeD0l.jpg",
          "release_date": "2018-06-01",
          "revenue": 0,
          "runtime": null,
          "tagline": "Life finds a way",
          "title": "Jurassic World: Fallen Kingdom",
          "vote_average": 0,
          "vote_count": 28,
        },
        Object {
          "budget": 0,
          "genres": Array [
            "Action",
            "Adventure",
            "Family",
            "Science Fiction",
          ],
          "id": 348350,
          "overview": "Through a series of daring escapades deep within a dark and dangerous criminal underworld, Han Solo meets his mighty future copilot Chewbacca and encounters the notorious gambler Lando Calrissian.",
          "poster_path": "https://image.tmdb.org/t/p/w500/uJ6OnE3CzGWq6buLINAbdBqa0gV.jpg",
          "release_date": "2018-05-23",
          "revenue": 0,
          "runtime": null,
          "tagline": "",
          "title": "Solo: A Star Wars Story",
          "vote_average": 0,
          "vote_count": 2,
        },
      ],
    },
    "type": "SET_MOVIE_LIST",
  },
]
`;
